<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AccsoLinearVerticalLayout" >

    <TextView
        android:id="@+id/lbl_edit_customer_heading"
        style="@style/AccsoHeading" />

    <TextView
        android:id="@+id/lbl_edit_customer_name_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_customer_name_title" />

    <EditText
        android:id="@+id/txt_edit_customer_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/lbl_edit_customer_street_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_customer_street_title" />

    <EditText
        android:id="@+id/txt_edit_customer_street"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/lbl_edit_customer_city_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_customer_city_title" />

    <EditText
        android:id="@+id/txt_edit_customer_city"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/lbl_edit_customer_zip_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_customer_zip_title"
        android:width="60dp" />

    <EditText
        android:id="@+id/txt_edit_customer_zip"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

  
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_gravity="bottom" >

	    <Button
	        android:id="@+id/ok_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="15dp"
	        android:onClick="saveCustomer"
	        android:text="@string/ok_button" >
	    </Button>

	    <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="15dp"
	        android:onClick="goBack"
	        android:text="@string/cancel_button" >
	    </Button>
	</LinearLayout>

</LinearLayout>