<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AccsoLinearVerticalLayout" >

    <TextView
        android:id="@+id/lbl_edit_project_heading"
        style="@style/AccsoHeading" />

    <TextView
        android:id="@+id/lbl_edit_project_name_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_project_name_title" />

    <EditText
        android:id="@+id/txt_edit_project_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/lbl_edit_project_description_title"
        style="@style/AccsoLabel"
        android:text="@string/lbl_edit_project_description_title" />

    <EditText
        android:id="@+id/txt_edit_project_description"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveProject"
            android:paddingTop="15dp"
            android:text="@string/ok_button" >
        </Button>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goBack"
            android:paddingTop="15dp"
            android:text="@string/cancel_button" >
        </Button>
    </LinearLayout>

</LinearLayout>